--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="div01">
       <!-- <ul> -->
-      <a href="https://newgreen123.github.io/temp/beta">
+      <a href="https://64tb.github.io/t/">
         <p class="ul00">hub</p>
       </a>
       <a href="https://temp-5c97a3.gitlab.io/beta">
